# containers-db

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: scan.yml  validate.yml
docs/: scanner.md  verification.md
fixtures/: tier1-example.json  tier2-example.json  tier3-example.json  tier4-example.json
fixtures/_negative/: dep-pin-on-system-package.json  dep-unknown-tool.json  dep-unparseable-constraint.json  dep-version-and-constraint.json  installed-dependency-unknown-field.json  missing-required.json  requires-conflicting-constraints.json  system-package-missing-platform.json  test-entry-image-pair-incomplete.json  tier1-gpg-without-key.json  tier2-without-pinned-checksum.json  tier3-with-pinned-checksum.json  tier4-without-tofu.json
fixtures/sample-tool/: index.json
fixtures/sample-tool/versions/: 1.0.0.json
scanner/: Cargo.toml
scanner/src/: activity.rs  adapter.rs  due.rs  failure.rs  generate.rs  lib.rs  main.rs  pr.rs  validate.rs
scanner/src/adapters/: mod.rs  rust.rs
scanner/tests/: rust_adapter_test.rs
schema/: tool.schema.json  version.schema.json
scripts/: validate-cross-refs.mjs  validate-cross-refs.test.mjs
tools/bash/: index.json
tools/ca_certificates/: index.json
tools/gcc/: index.json
tools/gnupg/: index.json
tools/libc_dev/: index.json
tools/musl_dev/: index.json
tools/rust/: index.json
tools/rust/recipes/: rustup.json
tools/rust/versions/: 1.93.0.json  1.93.1.json  1.94.0.json  1.94.1.json  1.95.0.json  1.96.0.json  1.96.1.json  1.97.0.json  1.97.1.json
validator/: Cargo.toml
validator/src/: catalog.rs  lib.rs  main.rs  rules.rs
validator/tests/: rules.rs
