[package]
name = "db-validator"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
publish = false
description = "Semantic validator for the containers-db tool catalog"

[[bin]]
name = "validate-catalog"
path = "src/main.rs"

[lib]
name = "db_validator"
path = "src/lib.rs"

[dependencies]
containers-common = { git = "https://github.com/joshjhall/containers", rev = "9db0e236e26fabd1a712485af95a0490d5e21847" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
